--- a/another.css
+++ b/another.css
@@ -7,8 +7,8 @@ text-align:center;
 
 .one img{
 border-radius:50%;
-width:17%;
-height:30%;
+width:300px;
+height:300px;
 }
 
 
@@ -31,8 +31,8 @@ text-align:center;
 
 .one img{
 border-radius:50%;
-width:60%;
-height:30%;
+width:200px;
+height:200px;
 }
 
 
