--- a/style.css
+++ b/style.css
@@ -12,15 +12,24 @@ width: 200px;
 
 .one {
 
-border-style: solid;
-border-width: 5px;
-margin: 20px;
-background-color: yellow;
+/*border-style: solid;
+border-width: 5px;*/
+/*margin: 20px;
+background-image: url('images/bg/footer-bg.png');*/
 }
 
 .one h1{
-
 margin-left: 20px;
-
+font-size: 25px;
 }
 
+.one h2{
+text-align: right;
+margin-right: 20px;
+font-size: 10px;
+}
+
+.one h3{
+margin-left: 20px;
+font-size: 25px;
+}
